Updated files to remove horizontal scroll bar for tables for large screens. Corrected + sign position

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -19,7 +19,11 @@
 
 .pencilicon {
     font-size: 16px;
-    color: yellow;
+    color: brown;
+}
+
+.pencilicon-hide {
+    visibility: hidden;
 }
 
 .justifyicon {
